--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Drew Miller",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.10.6",
     "glob": "^4.3.2",
+    "jade": "^1.8.2",
     "nodegrep": "^0.1.2"
   },
   "devDependencies": {
