--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "express": "^4.10.6",
     "glob": "^4.3.2",
-    "jade": "^1.8.2"
+    "jade": "^1.8.2",
+    "js-yaml": "^3.2.5"
   },
   "devDependencies": {
     "chai": "^1.10.0"
