--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^4.10.6",
     "glob": "^4.3.2",
     "jade": "^1.8.2",
-    "js-yaml": "^3.2.5"
+    "js-yaml": "^3.2.5",
+    "json-format": "0.0.1"
   },
   "devDependencies": {
     "chai": "^1.10.0"
