--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "glob": "^4.3.2",
     "jade": "^1.8.2",
     "js-yaml": "^3.2.5",
-    "json-format": "0.0.1"
+    "json-format": "0.0.1",
+    "marked": "^0.3.2"
   },
   "devDependencies": {
     "chai": "^1.10.0"
