--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "dependencies": {
     "express": "^4.10.6",
     "glob": "^4.3.2",
+    "html": "0.0.7",
     "jade": "^1.8.2",
     "js-yaml": "^3.2.5",
-    "json-format": "0.0.1",
-    "marked": "^0.3.2"
+    "json-format": "0.0.1"
   },
   "devDependencies": {
     "chai": "^1.10.0"
