--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Drew Miller",
   "license": "MIT",
   "dependencies": {
+    "case": "^1.2.1",
     "express": "^4.10.6",
     "glob": "^4.3.2",
     "html": "0.0.7",
