--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "html": "0.0.7",
     "jade": "^1.8.2",
     "js-yaml": "^3.2.5",
-    "json-format": "0.0.1"
+    "json-format": "0.0.1",
+    "node.extend": "^1.1.3"
   },
   "devDependencies": {
     "chai": "^1.10.0"
